1. Fix background image overlay 2. Fix alignment vertical center

--- a/src/components/about_us/AboutUs.css
+++ b/src/components/about_us/AboutUs.css
@@ -1,9 +1,7 @@
 .about-us-box {
-    background-color: rgb(249, 249, 235, 0.01);
     position: relative;
     padding: 2rem;
     opacity: 1;
-    z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
